--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>PUMA WORK</h1>
     <ul>
-        <li><a href="https://aswinshaji0001.github.io/puma/work.html"></a>PUMA WORK</li>
+        <li><a href="https://aswinshaji0001.github.io/puma/work.html">PUMA WORK</a></li>
     </ul>
 </body>
 </html>
