--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>PUMA WORK</h1>
     <ul>
         <li><a href="https://aswinshaji0001.github.io/puma/work.html">PUMA WORK</a></li>
+        <li><a href="https://aswinshaji0001.github.io/puma/puma.html">PUMA OG</a></li>
     </ul>
 </body>
 </html>
