--- a/puma.html
+++ b/puma.html
@@ -240,7 +240,117 @@
                 </div>
             </div>
         </div>
-
+        <div class="container10">
+            <div class="t">
+                <h1>FOR ALL THE</h1>
+                <h1>SNEAKERHEADS</h1>
+                <h3>YOUR ONE-STOP SNEAKER SHOP</h3>
+                    <button class="bx1">SHOP NOW</button>
+                    <button class="bx2">EXPLORE MORE</button>
+            </div>
+            <div class="im1">
+            </div>
+            <div class="im2">
+            </div>
+            <div class="im3">
+            </div>
+            <div class="im4">
+            </div>
+        </div>
+        <div class="container11">
+            <div class="am">
+                <h2>PUMA SPOTLIGHT</h2>
+            </div>
+            <div class="flex">
+                <div class="y1">
+                    <div class="x1">
+                        <img src="s11.avif" alt="">
+                        <div class="cox">
+                            <h3>-50%</h3>
+                        </div>
+                    </div>
+                    <div class="r1">
+                        <h4>Pumas Court </h4>
+                        <div class="price">
+                            <h3>2,399$</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="y1">
+                    <div class="x1">
+                        <img src="s22.avif" alt="">
+                        <div class="cox">
+                            <h3>-50%</h3>
+                        </div>
+                    </div>
+                    <div class="r1">
+                        <h4>Rider Future </h4>
+                        <div class="price">
+                            <h3>2,399$</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="y1">
+                    <div class="x1">
+                        <img src="s33.avif" alt="">
+                        <div class="cox">
+                            <h3>-50%</h3>
+                        </div>
+                    </div>
+                    <div class="r1">
+                        <h4>Cricket Square</h4>
+                        <div class="price">
+                            <h3>2,399$</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="y1">
+                    <div class="x1">
+                        <img src="s44.avif" alt="">
+                        <div class="cox">
+                            <h3>-50%</h3>
+                        </div>
+                    </div>
+                    <div class="r1">
+                        <h4>Hybrid NX Men</h4>
+                        <div class="price">
+                            <h3>2,399$</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="y1">
+                    <div class="x1">
+                        <img src="s55.avif" alt="">
+                        <div class="cox">
+                            <h3>-50%</h3>
+                        </div>
+                    </div>
+                    <div class="r1">
+                        <h4>Smashic Men</h4>
+                        <div class="price">
+                            <h3>2,399$</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="y1">
+                    <div class="x1">
+                        <img src="s66.avif" alt="">
+                        <div class="cox">
+                            <h3>-50%</h3>
+                        </div>
+                    </div>
+                    <div class="r1">
+                        <h4>Smashic Men</h4>
+                        <div class="price">
+                            <h3>2,399$</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container12">
+            
+        </div>
  
 </body>
 </html>
